@@ -79,11 +79,6 @@ class WC_Payments_Apple_Pay_Registration {
 	 * @return  void
 	 */
 	public function init() {
-		// TODO: Remove this ahead releasing Apple Pay for all merchants.
-		if ( ! WC_Payments::should_payment_request_be_available() ) {
-			return;
-		}
-
 		$this->gateway = WC_Payments::get_gateway();
 		$this->add_domain_association_rewrite_rule();
 
